# xylitol

./: .gitignore  AGENTS.md  LICENSE  README.md
.cursor/rules/: no-ai-commit-attribution.mdc
.github/workflows/: kernel-patches.yml  lint.yml  no-ai-coauthor.yml  twrp.yml
config/: mke2fs.conf
docs/: blobs.md  flashing.md  handoff.md  kernel-4.9-plan.md  known-good.md  perry-custom-kernel-plan.md  phase-b-boot-hang-bisect.md  pmos-camera-perry.md  pmos-fdt-brick-fix-plan.md  pmos-fdt-fix-runbook.md  pmos-lk2nd-perry-node.md  pmos-ofilm-panel.md  pmos-perry.md  pmos-runbook.md  pmos-upstream-kernel-plan.md  pmos.md  porting-log.md
manifests/: perry.xml  twrp-perry.xml
pmos/: README.md
pmos/phosh-plugin-perry-torch/: APKBUILD  README.md  meson.build  perry-front-torch-quick-setting.plugin.in  perry-rear-torch-quick-setting.plugin.in  perry-torch-led.c  perry-torch-led.h  phosh-plugin-perry-torch-quick-setting.c
scripts/: apply-patches.sh  apply-twrp-patches.sh  build-twrp.sh  build.sh  ci-check-kernel-patches.sh  extract-perry.sh  pmos-apply-device-perry.sh  pmos-apply-initramfs-perry.sh  pmos-apply-kernel-perry.sh  pmos-apply-lk2nd-perry.sh  pmos-apply-perry-deviceinfo.sh  pmos-apply-perry-firmware.sh  pmos-apply-perry-kernel.sh  pmos-apply-perry-ucm.sh  pmos-build-phase-b.sh  pmos-build-phosh-release.sh  pmos-flash-phase-b-force.sh  pmos-flash-phase-b.sh  pmos-install-perry-deviceinfo.sh  pmos-install-perry-ucm.sh  pmos-install-wcnss-nv.sh  pmos-rollback-known-good.sh  pmos-stage-phase-b-release.sh  setup-env.sh  sync-twrp.sh  sync.sh  unpack-stock.sh
(+86 files in other folders)
